# aos_core_lib_cpp

./: CMakeLists.txt  README.md  host_build.sh  sonar-project.properties
.github/workflows/: build_test.yaml  check_format.yaml  cppcheck.yaml
cmake/: CodeCoverage.cmake
conan/: conanfile.py
include/aos/common/: config.hpp  connectionsubsc.hpp  ocispec.hpp  types.hpp
include/aos/common/alerts/: alerts.hpp
include/aos/common/cloudprotocol/: alerts.hpp  cloudprotocol.hpp  envvars.hpp  log.hpp
include/aos/common/crypto/: crypto.hpp  cryptoprovider.hpp  utils.hpp
include/aos/common/crypto/mbedtls/: cryptoprovider.hpp  driverwrapper.hpp
include/aos/common/crypto/openssl/: cryptoprovider.hpp  opensslprovider.hpp
include/aos/common/downloader/: downloader.hpp
include/aos/common/image/: imagehandler.hpp
include/aos/common/monitoring/: alertprocessor.hpp  average.hpp  monitoring.hpp  resourcemonitor.hpp
include/aos/common/ocispec/: common.hpp  imagespec.hpp  ocispec.hpp  runtimespec.hpp  serviceconfig.hpp
include/aos/common/pkcs11/: pkcs11.hpp  privatekey.hpp
include/aos/common/spaceallocator/: spaceallocator.hpp
include/aos/common/tools/: algorithm.hpp  allocator.hpp  array.hpp  buffer.hpp  config.hpp  error.hpp  fs.hpp  function.hpp  list.hpp  log.hpp  map.hpp  memory.hpp  optional.hpp  os.hpp  queue.hpp  semver.hpp  string.hpp  thread.hpp  time.hpp  timer.hpp  utils.hpp  uuid.hpp  variant.hpp
include/aos/iam/: certhandler.hpp  certprovider.hpp  config.hpp  identhandler.hpp  nodemanager.hpp  permhandler.hpp  provisionmanager.hpp
include/aos/iam/certmodules/: certmodule.hpp  hsm.hpp
include/aos/iam/certmodules/pkcs11/: pkcs11.hpp
include/aos/iam/identmodules/: fileidentifier.hpp
include/aos/sm/: cni.hpp  config.hpp  instance.hpp  launcher.hpp  layermanager.hpp  logprovider.hpp  networkmanager.hpp  resourcemanager.hpp  runner.hpp  servicemanager.hpp
include/aos/sm/image/: imagehandler.hpp  imageparts.hpp
include/aos/sm/launcher/: config.hpp  instance.hpp  service.hpp
include/aos/test/: aoscoretestconfig.hpp  log.hpp  softhsmenv.hpp  utils.hpp
include/aos/test/crypto/providers/: cryptofactory.hpp  cryptofactoryitf.hpp  mbedtlsfactory.hpp  opensslfactory.hpp
src/common/: CMakeLists.txt
src/common/crypto/: CMakeLists.txt  crypto.cpp  cryptoutils.cpp
src/common/crypto/mbedtls/: cryptoprovider.cpp  driverwrapper.cpp
src/common/crypto/openssl/: cryptoprovider.cpp  opensslprovider.cpp  seqoid.hpp
src/common/monitoring/: alertprocessor.cpp  average.cpp  resourcemonitor.cpp
src/common/pkcs11/: pkcs11.cpp  privatekey.cpp
src/common/tools/: fs.cpp  semver.cpp  time.cpp  timer.cpp  uuid.cpp
src/iam/: CMakeLists.txt
src/iam/certhandler/: certhandler.cpp
src/iam/certmodules/: certmodule.cpp
src/iam/certmodules/pkcs11/: pkcs11.cpp
src/iam/certprovider/: certprovider.cpp  log.hpp
src/iam/identmodules/: fileidentifier.cpp
src/iam/nodeinfoprovider/: nodeinfoprovider.cpp
src/iam/nodemanager/: nodemanager.cpp
src/iam/permhandler/: permhandler.cpp
src/iam/provisionmanager/: provisionmanager.cpp
src/sm/: CMakeLists.txt
src/sm/image/: imageparts.cpp
src/sm/launcher/: instance.cpp  launcher.cpp  runtimespec.cpp  runtimespec.hpp  service.cpp
src/sm/layermanager/: layermanager.cpp  log.hpp
src/sm/networkmanager/: log.hpp  networkmanager.cpp
src/sm/resourcemanager/: resourcemanager.cpp
src/sm/servicemanager/: servicemanager.cpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt
tests/common/src/: alertprocessor_test.cpp  crypto_test.cpp  cryptoprovider_test.cpp  cryptoutils_test.cpp  monitoring_test.cpp  ocispec_test.cpp  pkcs11_test.cpp  types_test.cpp
tests/common/src/crypto/: crypto_test.cpp  cryptoprovider_test.cpp  cryptoutils_test.cpp
tests/common/src/spaceallocator/: spaceallocator_test.cpp
tests/common/src/tools/: allocator_test.cpp  array_test.cpp  buffer_test.cpp  fs_test.cpp  list_test.cpp  log_test.cpp  map_test.cpp  memory_test.cpp  optional_test.cpp  semver_test.cpp  string_test.cpp  thread_test.cpp  time_test.cpp  timer_test.cpp  uuid_test.cpp  variant_test.cpp
tests/iam/: CMakeLists.txt  iam_test.cpp
tests/iam/certmodules/: certmodules_test.cpp
tests/iam/certprovider/: certprovider_test.cpp
tests/iam/identmodules/: fileidentifier_test.cpp
tests/iam/nodemanager/: nodemanager_test.cpp  storagemock.hpp
tests/iam/permhandler/: permhandler_test.cpp
tests/iam/provisionmanager/: provisionmanager_test.cpp
tests/iam/stubs/: certhandlerstub.cpp  certhandlerstub.hpp  storagestub.cpp  storagestub.hpp
tests/include/: CMakeLists.txt
tests/include/mocks/: alertsmock.hpp  certhandlermock.hpp  certloadermock.hpp  certprovidermock.hpp  cnimock.hpp  connectionsubscmock.hpp  cryptomock.hpp  downloadermock.hpp  filesystemmock.hpp  identhandlermock.hpp  launchermock.hpp  logprovidermock.hpp  monitoringmock.hpp  networkmanagermock.hpp  nodeinfoprovidermock.hpp  nodemanagermock.hpp  ocispecmock.hpp  permhandlermock.hpp  provisionmanagermock.hpp  resourcemanagermock.hpp  runnermock.hpp  spaceallocatormock.hpp  storagemock.hpp  subjectsobservermock.hpp  trafficmonitormock.hpp  x509providermock.hpp
tests/mocks/: CMakeLists.txt
tests/sm/: CMakeLists.txt
tests/sm/image/: image_test.cpp
tests/sm/launcher/: launcher_test.cpp
tests/sm/layermanager/: layermanager_test.cpp
tests/sm/networkmanager/: networkmanager_test.cpp
tests/sm/resourcemanager/: resourcemanager_test.cpp
tests/sm/servicemanager/: servicemanager_test.cpp
tests/sm/stubs/: connectionsubscstub.hpp  imagehandlerstub.hpp  launcherstub.hpp  layermanagerstub.hpp  monitoringstub.hpp  ocispecstub.hpp  runnerstub.hpp  servicemanagerstub.hpp  spaceallocatorstub.hpp
tests/spaceallocator/: CMakeLists.txt  spaceallocator_test.cpp
tests/utils/: CMakeLists.txt
tests/utils/src/: softhsmenv.cpp  utils.cpp
tests/utils/src/crypto/providers/: mbedtlsfactory.cpp  opensslfactory.cpp
