#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET aosspaceallocator_test)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES spaceallocator_test.cpp)

# ######################################################################################################################
# Includes
# ######################################################################################################################

include_directories(${PROJECT_SOURCE_DIR}/tests/include)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})
target_link_libraries(${TARGET} aoscommon aostestutils GTest::gmock_main)

gtest_discover_tests(${TARGET})
